--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 # http://mageddo.com/tools/yaml-converter
 server:
   port: 8080
+# ----------- Eureka SD address for POST(Register),PUT(HeartBeat),Delete,Get
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.1.34:8761/eureka
+# -- Spring & Cloud LoadBalancer,gateway
 spring:
   application:
-    name: Gateway
+    name: gateway
   cloud:
     loadbalancer:
       service-discovery:
@@ -18,17 +24,24 @@ spring:
           enabled: true
           lower-case-service-id: true
       routes:
-        - id: test-service-withResilient4j
-          uri: http://localhost:8091
+        - id: people
+          uri: lb://people
           predicates:
-            - Path=/testService/**
+          - Path=/ddd/people/who
           filters:
-            - CircuitBreaker=backendA
-# ----------- Eureka SD address for POST(Register),PUT(HeartBeat),Delete,Get
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.1.34:8761/eureka
+          - name: CircuitBreaker
+            args:
+              name: myCircuitBreaker
+              fallbackUri: lb://gateway/fb/who
+        - id: products
+          uri: lb://product
+          predicates:
+          - Path=/ddd/product/find
+          filters:
+          - name: CircuitBreaker
+            args:
+              name: myCircuitBreaker
+              fallbackUri: lb://gateway/fb/showproduct
 # ---------------circuitbreaker resilience4j
 resilience4j:
   circuitbreaker:
@@ -42,12 +55,3 @@ resilience4j:
         wait-duration-in-open-state: 5s #Time based wait min to 5 fail to open circuit
         failure-rate-threshold: 50
         event-consumer-buffer-size: 10
-      whoservice:
-        record-exceptions:
-          - com.afshin.gateway.application.fallback.PeopleResFB
-       
-    instances:
-      whoami:
-        base-config: default
-      products:
-        base-config: default
