change pom file add artifact

--- a/Eurekaserver/pom.xml
+++ b/Eurekaserver/pom.xml
@@ -52,6 +52,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>eureka</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
