--- a/People/pom.xml
+++ b/People/pom.xml
@@ -130,6 +130,7 @@
 
 
     <build>
+		<finalName>people</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
