--- a/Shopping/pom.xml
+++ b/Shopping/pom.xml
@@ -140,6 +140,7 @@
   </dependencyManagement>
 
     <build>
+		<finalName>shopping</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
