--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -100,6 +100,7 @@
   </dependencyManagement>
 
 	<build>
+		<finalName>gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
