--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.1.34:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 # -- Spring & Cloud LoadBalancer,gateway
 spring:
   application:
