--- a/Gateway/src/main/resources/logstash.conf
+++ b/Gateway/src/main/resources/logstash.conf
@@ -7,7 +7,7 @@ input {
 
 output {
         elasticsearch {
-            hosts => ["http://192.168.1.39:9200"]
+            hosts => ["http://localhost:9200"]
             index => "%{serviceName}"
         }
 }
