--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 # http://mageddo.com/tools/yaml-converter
 server:
   port: 8080
+  address: 192.168.1.34
 # ----------- Eureka SD address for POST(Register),PUT(HeartBeat),Delete,Get
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${server.address}:8761/eureka
 # -- Spring & Cloud LoadBalancer,gateway
 spring:
   application:
