--- a/Product/src/main/resources/application.properties
+++ b/Product/src/main/resources/application.properties
@@ -33,7 +33,7 @@ springdoc.show-actuator=true
 spring.rabbitmq.host=${ip.address}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=passw123
 # create an AmqpAdmin bean:
 spring.rabbitmq.dynamic=true
 product.queue=ProductQu
