--- a/Shopping/src/main/resources/application.properties
+++ b/Shopping/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-ip.address=localhost
+ip.address=afshin
 # ---------------------------------IDENTITY
 spring.application.name= shopping
 # ----------------------------------EMBEDDED SERVER CONFIGURATION
-server.port=8083
+server.port=4043
 #server.servlet.context-path=
 server.servlet.context-path=/ddd
 # ---------------------------------- Actuater Endpoints,Metrics,Audit
@@ -15,7 +15,7 @@ management.endpoint.sessions.enabled=true
 management.endpoint.beans.enabled=true
 management.endpoint.caches.enabled=true
 management.endpoint.jolokia.enabled=true
-# ---------------------------------- Doc&Test for Rest Services: http://192.168.1.:8083/ddd/api-ui
+# ---------------------------------- Doc&Test for Rest Services: http://afshin:4043/ddd/api-ui
 springdoc.swagger-ui.path=/api-ui
 springdoc.api-docs.path=/api-json
 springdoc.show-actuator=true
@@ -28,7 +28,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.defer-datasource-initialization=true
-# ---------------------------------h2 Console  http://192.168.1.:8083/ddd/h2
+# ---------------------------------h2 Console  http://afshin:4043/ddd/h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Whether to enable trace output.
@@ -39,7 +39,7 @@ spring.h2.console.settings.web-allow-others=true
 spring.rabbitmq.host=${ip.address}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=passw123
 # create an AmqpAdmin bean:
 spring.rabbitmq.dynamic=true
 rabbitmq.exchange=orderEx
