create scenario for test all platforms, mysql, rabbit, h2, ...

--- a/Finance/src/main/resources/application.properties
+++ b/Finance/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ip.address=localhost
+ip.address=afshin
 # ---------------------------------IDENTITY
 spring.application.name= finance
 # ---------------------------------DATASOURCE
@@ -14,11 +14,11 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.hibernate.ddl-auto=none
 # ----------------------------------EMBEDDED SERVER CONFIGURATION
-server.port=8084
+server.port=4044
 #server.servlet.context-path=
 server.servlet.context-path=/ddd
-# ---------------------------------- Actuater Endpoints,Metrics,Audit
-management.endpoints.web.exposure.include = *  
+# ---------------------------------- Actuator Endpoints,Metrics,Audit
+management.endpoints.web.exposure.include = *
 #management.endpoints.web.expose = *
 management.server.port=7084 
 management.endpoint.health.show-details=ALWAYS
@@ -28,7 +28,7 @@ management.endpoint.beans.enabled=true
 management.endpoint.caches.enabled=true
 management.endpoint.jolokia.enabled=true
 
-# ---------------------------------- Doc&Test for Rest Services: http://192.168.1.:8084/ddd/api-ui
+# ---------------------------------- Doc&Test for Rest Services: http://afshin:4044/ddd/api-ui
 springdoc.swagger-ui.path=/api-ui
 springdoc.api-docs.path=/api-json
 springdoc.show-actuator=true
@@ -41,7 +41,7 @@ people.service=/ddd/people/who
 spring.rabbitmq.host=${ip.address}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=passw123
 # create an AmqpAdmin bean:
 spring.rabbitmq.dynamic=true
 rabbitmq.exchange=ProductEx
