--- a/Monitoring/src/main/resources/application.properties
+++ b/Monitoring/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ip.address=localhost
+ip.address=afshin
 # ---------------------------------IDENTITY
 spring.application.name=monitoring
 server.port=8759
