--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,13 +1,14 @@
 input {
         tcp {
-            port => 9090
+            port => 5044
             codec => "json"
+            mode => "server"
         }
 }
 
 output {
         elasticsearch {
-            hosts => ["http://localhost:9200"]
+            hosts => ["http://afshin:9200"]
             index => "%{serviceName}"
         }
 }
