--- a/Product/pom.xml
+++ b/Product/pom.xml
@@ -115,18 +115,12 @@
             <artifactId>log4j-layout-template-json</artifactId>
             <version>2.20.0</version>
         </dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.graylog2.log4j2/log4j2-gelf -->
-        <!--<dependency>
-            <groupId>org.graylog2.log4j2</groupId>
-            <artifactId>log4j2-gelf</artifactId>
-            <version>1.3.1</version>
-        </dependency>-->
         <!-- _________ Logstash , log4j2 appender _____________ -->
-        <!--<dependency>
+        <dependency>
             <groupId>biz.paluch.logging</groupId>
             <artifactId>logstash-gelf</artifactId>
             <version>1.15.1</version>
-        </dependency>-->
+        </dependency>
         <!-- _________ Sleuth:TraceId and SpanId _____________ -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
