add zipkin to apps

--- a/Finance/src/main/resources/application.properties
+++ b/Finance/src/main/resources/application.properties
@@ -69,5 +69,14 @@ feign.circuitbreaker.enabled=true
 feign.client.config.default.connect-timeout=5000
 feign.client.config.default.read-timeout=5000
 feign.client.config.default.logger-level=basic
-# ---------------zipkin
-spring.zipkin.enabled=false
+# ---------------------------------- sleuth & zipkin
+#sampler add span-id to n% of transactions
+spring.sleuth.sampler.probability=1.0
+# Adds trace and span IDs to logs (when a trace is in progress)
+logging.level.org.springframework.web=DEBUG
+logging.pattern.level=[%X{traceId}/%X{spanId}] %-5p [%t] %C{2} - %m%n
+spring.zipkin.discovery-client-enabled=true
+spring.zipkin.enabled=true
+spring.zipkin.base-url=http://afshin:9411/
+spring.zipkin.sender.type= web
+spring.zipkin.service.name=${spring.application.name}
