--- a/Product/pom.xml
+++ b/Product/pom.xml
@@ -127,14 +127,21 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
         <!-- _________ Zipkin is a distributed tracing system  _____________ -->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <!--<dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-sleuth-dependencies</artifactId>
+                <version>3.0.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
