--- a/Shopping/src/main/resources/application.properties
+++ b/Shopping/src/main/resources/application.properties
@@ -68,3 +68,14 @@ resilience4j.circuitbreaker.configs.default.event-consumer-buffer-size=10
 resilience4j.circuitbreaker.configs.default.record-exceptions=java.net.ConnectException, java.io.IOException, java.util.concurrent.TimeoutException
 resilience4j.circuitbreaker.instances.whoami.base-config=default
 resilience4j.circuitbreaker.instances.products.base-config=default
+# ---------------------------------- sleuth & zipkin
+#sampler add span-id to n% of transactions
+spring.sleuth.sampler.probability=1.0
+# Adds trace and span IDs to logs (when a trace is in progress)
+logging.level.org.springframework.web=DEBUG
+logging.pattern.level=[%X{traceId}/%X{spanId}] %-5p [%t] %C{2} - %m%n
+spring.zipkin.discovery-client-enabled=true
+spring.zipkin.enabled=true
+spring.zipkin.base-url=http://afshin:9411/
+spring.zipkin.sender.type= web
+spring.zipkin.service.name=${spring.application.name}
